[gd_scene load_steps=7 format=3 uid="uid://cxfsj8x1di53l"]

[ext_resource type="Script" path="res://level_1.gd" id="1_a3k8v"]
[ext_resource type="PackedScene" uid="uid://c7eb7hngf2bmm" path="res://background_1.tscn" id="2_dktp2"]
[ext_resource type="PackedScene" uid="uid://mouvuk22mn85" path="res://hud.tscn" id="3_tpe4e"]
[ext_resource type="PackedScene" uid="uid://coom2gtmojaa0" path="res://answer_spawn.tscn" id="4_4k4xg"]
[ext_resource type="PackedScene" uid="uid://cge8mgijxca8v" path="res://kill_plane.tscn" id="5_yx64u"]
[ext_resource type="PackedScene" uid="uid://2tvohq7u2ygs" path="res://player.tscn" id="6_y5tno"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_a3k8v")

[node name="Background1" parent="." instance=ExtResource("2_dktp2")]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)

[node name="Hud" parent="." instance=ExtResource("3_tpe4e")]

[node name="AnswerSpawn" parent="." instance=ExtResource("4_4k4xg")]
texture_filter = 1
scale = Vector2(1.5, 1.5)

[node name="KillPlane" parent="." instance=ExtResource("5_yx64u")]
position = Vector2(229, 131)

[node name="Player" parent="." instance=ExtResource("6_y5tno")]
position = Vector2(882, 913)
